requisitos de 1 ao 5

--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
-<htmlll>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+</head>
+<body>
+
+<header id="cabecalho">
+    <h1 id="titulo">TITULO</h1>
+</header>
+
+<img id= "minha_foto" src="images/IMG_20210903_122922.jpg" alt="mulher de cor parda, cabelos curtos e crespos e de óculos escuros. Ao fundo o mar.">
+
+<section>
+    <h2>Lições Aprendidas</h2>
+    <ol id="licoes_aprendidas">
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Diversidade</li>
+        <li>Empatia</li>
+        <li>Ética</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Slack</li>
+        <li>Unix(Ainda Desvendando)</li>
+        <li>Box Model</li>
+    </ol>
+</section>
+
+<section>
+<h2>Lições A Aprender</h2>
+<ul id="licoes_a_aprender">
+<li>Dominar Git e GitHub</li>
+<li>Dominar o Box Model</li>
+<li>Ter um relação de Amor com Java Script</li>
+<li>Fazer megas estilizações com CSS</li>
+<li>Ser mais focada</li>
+<li>DOM</li>
+<li>SQL</li>
+<li>Angular</li>
+<li>React</li>
+<li>Phyton</li>
+</ul>
+</section>
+
+    
+</body>
+</html>
