--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
+    
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -29,14 +29,12 @@
                 <img id="minha_foto" src="images/IMG_20210903_122922.jpg" alt="mulher de cor parda, cabelos curtos e crespos e de óculos escuros. Ao fundo o mar.">
             </section>
 
-            <div>
-                <article class="lado-direito">
-                    <h2 class="titulodoartigo">Sobre mim</h2>
-                    <p class="textoartigo">Carioca, Mãe, Pegagoga, Graduanda em Administração de Empresas, Estudante de Programação, Atriz de teatro amador, Serva de Deus, Mulher da reforma e do Artesanato... Não necessariamente nesta ordem!</p>
-                    <p class="textoartigo">“Se não for para ser de verdade, se não for para ser intenso e não ser for para crescer, eu nem vou!”</p>
-                </article>
-            </div>
-
+            <article class="lado-direito">
+                <h2 class="titulodoartigo">Sobre mim</h2>
+                <p class="textoartigo">Carioca, Mãe, Pegagoga, Graduanda em Administração de Empresas, Estudante de Programação, Atriz de teatro amador, Serva de Deus, Mulher da reforma e do Artesanato... Não necessariamente nesta ordem!</p>
+                <p class="textoartigo">“Se não for para ser de verdade, se não for para ser intenso e se não for para crescer, eu nem vou!”</p>
+            </article>
+            
             <div id="lado-direito1">
                 <h2 class="titulodoartigo">Você me Encontra</h2>
                 <p class="textoartigo">Linkedin , Instagram , GitHub</p>
